--- a/eigen-compute/package.json
+++ b/eigen-compute/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc --project tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@noble/curves": "^1.6.0",
+    "@pythnetwork/hermes-client": "^1.2.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pino": "^9.3.2",
@@ -20,8 +23,11 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.0.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^2.1.4"
   }
 }
 
