--- a/eigen-compute/package.json
+++ b/eigen-compute/package.json
@@ -11,9 +11,10 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@noble/curves": "^1.6.0",
     "@pythnetwork/hermes-client": "^1.2.1",
+    "cofhejs": "^0.3.1",
     "dotenv": "^16.4.5",
+    "ethers": "^6.15.0",
     "express": "^4.19.2",
     "pino": "^9.3.2",
     "pino-http": "^10.3.0",
@@ -30,4 +31,3 @@
     "vitest": "^2.1.4"
   }
 }
-
